# ASK_DSW

./: .gitignore  CMakeLists.txt  Makefile  Observer.cpp  Wzorce_projektowe.pptx
adapter/: adaptee.cpp  adaptee.h  adapter.cpp  adapter.h  main.cpp  target.cpp  target.h
factory/: classes.h  factory.cpp  factory.h  main.cpp
mediator/: chatroom.cpp  chatroom.h  client.cpp  client.h  main.cpp  mediator.h
memento/: caretaker.cpp  caretaker.h  concreteMemento.cpp  concreteMemento.h  main.cpp  memento.h  originator.cpp  originator.h
singleton/: main.cpp  singleton.h
